WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76896
[WK2] http/tests/navigation/anchor-frames-gbk.html fails
https://bugs.webkit.org/show_bug.cgi?id=76896
Summary
[WK2] http/tests/navigation/anchor-frames-gbk.html fails
Csaba Osztrogonác
Reported
2012-01-23 23:42:36 PST
http/tests/navigation/anchor-frames-gbk.html introduced in
http://trac.webkit.org/changeset/105691
but fails on Qt WK2. Maybe it fails on Mac WK2 too, but I don't know, because Mac WK2 bot is dead long long time ago. --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/http/tests/navigation/anchor-frames-gbk-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/http/tests/navigation/anchor-frames-gbk-actual.txt @@ -1,22 +1,1 @@ - --------- -Frame: 'main' --------- -Tests that loading a frame with a URL that contains a fragment pointed at a named anchor actually scrolls to that anchor. - -On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". - - -PASS document.body.offsetHeight > document.documentElement.clientHeight is true -PASS document.body.scrollTop > 0 is true -PASS document.body.scrollTop + document.documentElement.clientHeight > 2000 is true -PASS successfullyParsed is true - -TEST COMPLETE -This is an anchor point named as the Unicode equivalent of the GBK sequence %a9g (test trailing low byte). - --------- -Frame: 'footer' --------- -
Attachments
Patch
(3.80 KB, patch)
2012-04-28 07:42 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2012-03-19 19:24:58 PDT
It does indeed fail in the same way on mac-wk2, so I'm going to skip it there as well!
Radar WebKit Bug Importer
Comment 2
2012-03-19 19:27:40 PDT
<
rdar://problem/11078978
>
Tim Horton
Comment 3
2012-03-19 19:31:27 PDT
(In reply to
comment #2
)
> <
rdar://problem/11078978
>
Landed skip for mac-wk2 in
http://trac.webkit.org/changeset/111315
Zan Dobersek
Comment 4
2012-04-28 07:42:29 PDT
Created
attachment 139362
[details]
Patch
Zan Dobersek
Comment 5
2012-04-28 09:00:00 PDT
Comment on
attachment 139362
[details]
Patch Clearing flags on attachment: 139362 Committed
r115572
: <
http://trac.webkit.org/changeset/115572
>
Zan Dobersek
Comment 6
2012-04-28 09:00:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug