[WK2] http/tests/navigation/anchor-frames-gbk.html fails https://bugs.webkit.org/show_bug.cgi?id=76896

Reviewed by Darin Adler.

Tools:

Only dump as text if currently dumping render tree. This ensures that
calling dumpAsText in a test with dumpChildFramesAsText already being
called doesn't override the first decision, possibly making tests fail.

* WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
(WTR::LayoutTestController::dumpAsText):

LayoutTests:

Unskip the now-passing test for Mac and Qt WK2 ports.

* platform/mac-wk2/Skipped:
* platform/qt-5.0-wk2/Skipped:


Canonical link: https://commits.webkit.org/102693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115572 268f45cc-cd09-0410-ab3c-d52691b4dbfc